--- a/.github/workflows/is-compatible.yml
+++ b/.github/workflows/is-compatible.yml
@@ -28,15 +28,16 @@ jobs:
       - name: Build Plugin
         run: npm run build
 
-      - name: Find "module.ts" or "module.tsx"
-        id: find-module-ts
-        run: |
-          MODULETS="$(find ./src -type f \( -name "module.ts" -o -name "module.tsx" \))"
-          echo "modulets=${MODULETS}" >> $GITHUB_OUTPUT
+      # - name: Find "module.ts" or "module.tsx"
+      #   id: find-module-ts
+      #   run: |
+      #     MODULETS="$(find ./src -type f \( -name "module.ts" -o -name "module.tsx" \))"
+      #     echo "modulets=${MODULETS}" >> $GITHUB_OUTPUT
 
       - name: Compatibility Check
         uses: grafana/plugin-actions/is-compatible@main
         with:
-          module: ${{ steps.find-module-ts.outputs.modulets }}
+          # module: ${{ steps.find-module-ts.outputs.modulets }}
+          module: ./src/module.tsx
           comment-pr: 'no'
           fail-if-incompatible: 'yes'
