Create Plugin Update
- Run `npx @grafana/create-plugin update`
- Remove Dependabot configuration for npm, because dependecies are
  updated with `npx @grafana/create-plugin update`

--- a/.github/workflows/is-compatible.yml
+++ b/.github/workflows/is-compatible.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           # module: ${{ steps.find-module-ts.outputs.modulets }}
           module: ./src/module.tsx
-          comment-pr: 'no'
-          fail-if-incompatible: 'yes'
+          comment-pr: no
+          fail-if-incompatible: yes
