--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -3,6 +3,7 @@ apiVersion: 1
 datasources:
   - name: Kubernetes
     type: ricoberger-kubernetes-datasource
+    uid: kubernetes
     access: proxy
     isDefault: false
     orgId: 1
@@ -24,5 +25,6 @@ datasources:
       grafanaPassword: admin
   - name: Jaeger
     type: jaeger
+    uid: jaeger
     url: http://jaeger:16686
     access: proxy
