--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@grafana/scenes": "^6.38.0",
     "@grafana/schema": "^12.2.0",
     "@grafana/ui": "^12.2.0",
+    "@kubernetes/client-node": "^1.4.0",
     "fast-json-patch": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
