Add Support to Link Traces
It is now possible to link traces within the datasource configuration.
This means whenever a log line contains a trace id, it will be linked to
the tracing provider configured by the user.

--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -20,6 +20,8 @@ datasources:
       generateKubeconfigName: grafana
       generateKubeconfigTTL: 604800
       generateKubeconfigPort: 11716
+      integrationsTraces: true
+      integrationsTracesLink: /explore?schemaVersion=1&panes={"ao9":{"datasource":"jaeger","queries":[{"query":"$${__value.raw}","refId":"A"}]}}
     secureJsonData:
       clusterKubeconfig:
       grafanaPassword: admin
@@ -27,4 +29,7 @@ datasources:
     type: jaeger
     uid: jaeger
     url: http://jaeger:16686
+    # To use a Jaeger instance running on the host machine, uncomment the line
+    # below and comment out the line above.
+    # url: http://host.docker.internal:16686
     access: proxy
