--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       GF_PATHS_CONFIG: /etc/grafana/provisioning/custom.ini
     volumes:
       - ./kubeconfig-grafana.yaml:/kubeconfig-grafana.yaml
+    extra_hosts:
+      - host.docker.internal:host-gateway
     depends_on:
       - jaeger
       - k3s-kubeconfig
