Replace Link with Query in Traces Integration
Instead of linking to a traces datasource like Jaeger in the traces
integration, we now require a query in the Kubernetes datasource
settings.

This commit also improves the linking to the explore view for logs,
nodes and pods by using the same query mechanism.

--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -24,7 +24,7 @@ datasources:
       integrationsMetricsKubeletJob: kubelet
       integrationsMetricsKubeStateMetricsJob: kube-state-metrics
       integrationsMetricsNodeExporterJob: node-exporter
-      integrationsTracesLink: /explore?schemaVersion=1&panes={"ao9":{"datasource":"jaeger","queries":[{"query":"$${__value.raw}","refId":"A"}]}}
+      integrationsTracesQuery: '{"datasource":"jaeger","queries":[{"query":"$${__value.raw}","refId":"A"}]}'
     secureJsonData:
       clusterKubeconfig:
       grafanaPassword: admin
