Improve Logs and Error Handling
Unify the logs, by using the same style for messages and the same field
for errors.

Improve the error handling for getting resources, by returning the error
message, when the list of resources is empty and when there is at least
one error.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,8 @@ services:
       GF_AUTH_BASIC_ENABLED: true
       GF_PATHS_CONFIG: /etc/grafana/provisioning/custom.ini
     volumes:
-      - ./kubeconfig-grafana.yaml:/kubeconfig-grafana.yaml
+      # - ./kubeconfig-grafana.yaml:/kubeconfig-grafana.yaml
+      - /Users/ricoberger/.kube/config:/kubeconfig-grafana.yaml
     extra_hosts:
       - host.docker.internal:host-gateway
     depends_on:
