--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -12,9 +12,9 @@ datasources:
     jsonData:
       clusterProvider: path
       clusterPath: /kubeconfig-grafana.yaml
-      clusterContext: default
+      clusterContext: grafana
       grafanaUsername: admin
-      impersonateUser: false
+      impersonateUser: true
       impersonateGroups: false
       generateKubeconfig: true
       generateKubeconfigName: grafana
