Fix Datasource Configuration and Docker Compose Setup
Fix the configuration of the provisioned Kubernetes datasource and the
Docker Compose setup, which was accidentally committed in #18.

--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -12,7 +12,7 @@ datasources:
     jsonData:
       clusterProvider: path
       clusterPath: /kubeconfig-grafana.yaml
-      clusterContext: grafana
+      clusterContext: default
       grafanaUsername: admin
       impersonateUser: true
       impersonateGroups: false
