--- a/package.json
+++ b/package.json
@@ -87,11 +87,13 @@
     "@emotion/css": "11.10.6",
     "@grafana/data": "^12.2.0",
     "@grafana/i18n": "^12.2.0",
+    "@grafana/llm": "0.22.1",
     "@grafana/runtime": "^12.2.0",
     "@grafana/scenes": "^6.38.0",
     "@grafana/schema": "^12.2.0",
     "@grafana/ui": "^12.2.0",
     "@kubernetes/client-node": "^1.4.0",
+    "dangerously-set-html-content": "^1.1.0",
     "fast-json-patch": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
