--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@emotion/css": "11.10.6",
     "@grafana/data": "^12.2.0",
     "@grafana/i18n": "^12.2.0",
+    "@grafana/llm": "0.22.1",
     "@grafana/runtime": "^12.2.0",
     "@grafana/scenes": "^6.38.0",
     "@grafana/schema": "^12.2.0",
