--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.8.7",
-    "@types/testing-library__jest-dom": "5.14.8",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -95,8 +96,8 @@
     "@kubernetes/client-node": "^1.4.0",
     "dangerously-set-html-content": "^1.1.0",
     "fast-json-patch": "^3.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "react-router-dom": "^6.22.0",
     "react-use": "^17.6.0",
     "rxjs": "7.8.2",
