Add Basic JSONPath Support for Filtering Resources
It is now possible to filter the list of returned Kubernetes resources
using JSONPath expressions. For example, we can now retrieve the Jobs
for a CronJob by specifying the following JSONPath expression:
`[?(@.metadata.ownerReferences[0].name=='myjobname')]`.

NOTE: The JSONPath can only be applied to the metadata of the resource,
because we still using the `Accept` header with a value of
`application/json;as=Table;v=v1;g=meta.k8s.io,application/json;as=Table;v=v1beta1;g=meta.k8s.io,application/json`
which only returns the partial metadata of the resource in the response.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
 
   jaeger:
     container_name: grafana-jaeger
-    image: cr.jaegertracing.io/jaegertracing/jaeger:2.10.0
+    image: jaegertracing/jaeger:2.14.0
 
   k3s:
     container_name: grafana-k3s
