--- a/package.json
+++ b/package.json
@@ -88,11 +88,11 @@
     "@emotion/css": "11.10.6",
     "@grafana/data": "^12.4.0",
     "@grafana/i18n": "^12.4.0",
-    "@grafana/llm": "0.22.1",
+    "@grafana/llm": "^1.0.3",
     "@grafana/runtime": "^12.4.0",
     "@grafana/scenes": "^7.0.3",
-    "@grafana/schema": "^12.2.0",
-    "@grafana/ui": "^12.3.3",
+    "@grafana/schema": "^12.4.0",
+    "@grafana/ui": "^12.4.0",
     "@kubernetes/client-node": "^1.4.0",
     "dangerously-set-html-content": "^1.1.0",
     "fast-json-patch": "^3.1.1",
